Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-28351

QQmlContextData gets cleared too early

XMLWordPrintable

    • c18e04b2e61f174a4883f6884cf9a0712c5725e3 (qt/qtdeclarative)

      When a XMLHttpRequest is performed from within the calling context of an external script, a reference to the context is created by QXMLHttpRequest and stored in a non-persistent v8 variable.

      When this variable is garbage collected after the XMLHttpRequest completes, QV8ContextResource clears the associated QQmlContextData and no further XMLHttpRequests are possible from this context.

      A patch for this issue is available at https://codereview.qt-project.org/41481

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lorenzph Philip Lorenz
            lorenzph Philip Lorenz
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes